# BlackHoleSim

./: CMakeLists.txt  README.md
.cache/clangd/index/: gr.cpp.976FD488D0C40CAB.idx  gr.hpp.C45E1AC58569EA73.idx  main.cpp.7AB1A146A1599820.idx  ppm.cpp.ABAA6AD2A136E0F3.idx  ppm.hpp.A8C0BC357CF9356C.idx
include/: gr.hpp
src/: gr.cpp  main.cpp
test/: test2.cpp
tools/: batch_ppm2png.py  ppm2png.py
